[RED] added tests for new endpoints